--- a/login-registration-springboot-hibernate-jsp-auth/src/main/resources/application.properties
+++ b/login-registration-springboot-hibernate-jsp-auth/src/main/resources/application.properties
@@ -2,8 +2,12 @@
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/demo?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=Mysql@123
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto = update
+
 spring.messages.basename=validation
 
 logging.level.root = INFO,ERROR
