--- a/.github/workflows/spring-boot-crud-rest.yml
+++ b/.github/workflows/spring-boot-crud-rest.yml
@@ -1,13 +1,13 @@
-name: springboot-thymeleaf-security-demo
+name: spring-boot-crud-rest
 
 on:
   push:
     paths:
-      - "springboot-thymeleaf-security-demo/**"
+      - "spring-boot-crud-rest/**"
     branches: [master]
   pull_request:
     paths:
-      - "springboot-thymeleaf-security-demo/**"
+      - "spring-boot-crud-rest/**"
     types:
       - opened
       - synchronize
@@ -22,19 +22,13 @@ jobs:
         with:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
 
-      - name: Set up JDK 17
+      - name: Set up JDK 11
         uses: actions/setup-java@v3.0.0
         with:
-          java-version: 17
+          java-version: 11
           distribution: "adopt"
           cache: "maven"
-      - name: Start up databases via docker compose
-        run: |
-          cd springboot-thymeleaf-security-demo
-          docker compose up -d
-          sleep 15
-          docker ps -a
       - name: Build and analyze
         run: |
-          cd springboot-thymeleaf-security-demo
+          cd spring-boot-crud-rest
           mvn clean package
