--- a/springboot-thymeleaf-security-demo/src/main/resources/application.properties
+++ b/springboot-thymeleaf-security-demo/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 
 ################### DataSource Configuration ##########################
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/test?createDatabaseIfNotExist=true
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
 spring.datasource.initialization-mode=always
 
