Upgrade hibernate samples (#21)
* Upgrade springboot-crud-hibernate-example

* fix issues with build

* upgrade validation

* converts to postgres

* fixes database name

* fixes hibernate composite key

* fixes parsing of method

* fix many to many mapping

* fixes one to many

* fixes one-one mapping

* adds missing work flows

* fixes jpa 1-1

* fixes workflow

* adds validation starter

--- a/springboot-crud-rest-api-validation/pom.xml
+++ b/springboot-crud-rest-api-validation/pom.xml
@@ -1,4 +1,4 @@
-	<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 	<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		<modelVersion>4.0.0</modelVersion>
@@ -14,14 +14,14 @@
 		<parent>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-parent</artifactId>
-			<version>2.0.5.RELEASE</version>
+			<version>2.6.4</version>
 			<relativePath/> <!-- lookup parent from repository -->
 		</parent>
 	
 		<properties>
 			<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 			<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-			<java.version>1.8</java.version>
+			<java.version>17</java.version>
 		</properties>
 	
 		<dependencies>
@@ -32,6 +32,10 @@
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-web</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-validation</artifactId>
 			</dependency>
 	
 			<dependency>
@@ -45,8 +49,8 @@
 				<scope>runtime</scope>
 			</dependency>
 			<dependency>
-				<groupId>mysql</groupId>
-				<artifactId>mysql-connector-java</artifactId>
+				<groupId>org.postgresql</groupId>
+				<artifactId>postgresql</artifactId>
 				<scope>runtime</scope>
 			</dependency>
 			<dependency>
