--- a/springboot-hibernate-one-many-mapping/src/main/resources/application.properties
+++ b/springboot-hibernate-one-many-mapping/src/main/resources/application.properties
@@ -1,12 +1,7 @@
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:mysql://localhost:3306/demo?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=root
-spring.datasource.password=root
-
-# Hibernate
-
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/demo?createDatabaseIfNotExist=true
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
