--- a/.github/workflows/springboot2-webapp-jsp.yml
+++ b/.github/workflows/springboot2-webapp-jsp.yml
@@ -1,13 +1,13 @@
-name: springboot-upload-download-file-database
+name: springboot2-webapp-jsp
 
 on:
   push:
     paths:
-      - "springboot-upload-download-file-database/**"
+      - "springboot2-webapp-jsp/**"
     branches: [master]
   pull_request:
     paths:
-      - "springboot-upload-download-file-database/**"
+      - "springboot2-webapp-jsp/**"
     types:
       - opened
       - synchronize
@@ -22,19 +22,14 @@ jobs:
         with:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
 
-      - name: Set up JDK 17
+      - name: Set up JDK 8
         uses: actions/setup-java@v3.0.0
         with:
-          java-version: 17
+          java-version: 8
           distribution: "adopt"
           cache: "maven"
-      - name: Start up databases via docker compose
-        run: |
-          cd springboot-upload-download-file-database
-          docker compose up -d
-          sleep 15
-          docker ps -a
       - name: Build and analyze
         run: |
-          cd springboot-upload-download-file-database
-          mvn clean package
+          cd springboot2-webapp-jsp
+          chmod +x mvnw
+          ./mvnw clean package
