--- a/springboot-upload-download-file-database/src/main/resources/application.properties
+++ b/springboot-upload-download-file-database/src/main/resources/application.properties
@@ -1,10 +1,7 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/springboot_demo?useSSL=false
-spring.datasource.username= root
-spring.datasource.password= root
+spring.datasource.url=jdbc:postgresql://localhost:5432/demo?createDatabaseIfNotExist=true
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
-## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = update
 
 ## Hibernate Logging
