attempt to fix loading schema.sql

--- a/springboot2-jdbc-crud-postgresql-example/src/main/resources/application.properties
+++ b/springboot2-jdbc-crud-postgresql-example/src/main/resources/application.properties
@@ -3,11 +3,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/demo?createDatabaseIfNotE
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
-# Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
-
-logging.level.org.hibernate.stat=debug
-# Show all queries
+# JPA Properties
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
 logging.level.org.hibernate.type=trace
+logging.level.org.hibernate.stat=debug
