removes unnecessary project

--- a/springboot2-jdbc-crud-postgresql-example/src/main/resources/application.properties
+++ b/springboot2-jdbc-crud-postgresql-example/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.password=postgres
 # JPA Properties
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.defer-datasource-initialization=true
 
 logging.level.org.hibernate.type=trace
 logging.level.org.hibernate.stat=debug
