fixes build issue

--- a/springboot2-jdbc-crud-postgresql-example/src/main/resources/application.properties
+++ b/springboot2-jdbc-crud-postgresql-example/src/main/resources/application.properties
@@ -3,8 +3,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/demo?createDatabaseIfNotE
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
+
 # JPA Properties
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
 
