--- a/springboot2-jdbc-crud-postgresql-example/src/main/resources/application.properties
+++ b/springboot2-jdbc-crud-postgresql-example/src/main/resources/application.properties
@@ -6,9 +6,11 @@ spring.datasource.password=postgres
 
 # JPA Properties
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
+
+spring.sql.init.mode=always
 
 logging.level.org.hibernate.type=trace
 logging.level.org.hibernate.stat=debug
