differ datasource initialization

--- a/springboot2-jdbc-crud-postgresql-example/src/main/resources/application.properties
+++ b/springboot2-jdbc-crud-postgresql-example/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.password=postgres
 # JPA Properties
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.defer-datasource-initialization=true
 
 spring.sql.init.mode=always
 
